fix projection scrollbar bug

--- a/src/projection/projection.sass
+++ b/src/projection/projection.sass
@@ -2,6 +2,7 @@
 
 .projections
     overflow: hidden // TODO(ricl): ideally we don't need this. But without this a h-scrollbar is shown.
+    padding: $space-md
     .projection-title
         text-align: center
         font-size: 1.5em
